# gvi

./: .gitignore  CONTRIBUTORS.md  NOTICE_LICENSING.md  README.md  pyproject.toml
configs/training/: tilemap_classes.yaml
dataset/: DATASET_CARD.md  README_DATASET.md  classes.json  data.yaml  gvi_dataset_config.json
dataset/annotations/gvi/: synthetic_0000.json  synthetic_0001.json  synthetic_0002.json  synthetic_0003.json  synthetic_0004.json  synthetic_0005.json  synthetic_0006.json  synthetic_0007.json  synthetic_0008.json  synthetic_0009.json  synthetic_0010.json  synthetic_0011.json  synthetic_0012.json  synthetic_0013.json  synthetic_0014.json  synthetic_0015.json  synthetic_0016.json  synthetic_0017.json  synthetic_0018.json  synthetic_0019.json  synthetic_0020.json  synthetic_0021.json  synthetic_0022.json  synthetic_0023.json  synthetic_0024.json  synthetic_0025.json  synthetic_0026.json  synthetic_0027.json  synthetic_0028.json  synthetic_0029.json  synthetic_0030.json  synthetic_0031.json  synthetic_0032.json  synthetic_0033.json  synthetic_0034.json  synthetic_0035.json  (+14 more)
dataset/labels/: train.cache  val.cache
docs/: AI_ENGINEER_PORTFOLIO.md  ANNOTATION_GUIDE.md  CHANGELOG_v1.1.md  CHANGELOG_v1.2.1.md  CHANGELOG_v1.2.md  CHANGELOG_v1.3.md  CLAUDE_CODE_HANDOFF_HF.md  HF_TEACHER.md  QUICKSTART_TRAINING.md  TEACHER_BACKENDS.md  TRAINING.md  TRAINING_ROADMAP.md
gvi/: __init__.py  cli.py
gvi/api_server/: __init__.py  app.py  mcp_stdio.py
gvi/core/: __init__.py  orchestrator.py  planner.py  plugin.py  registry.py  types.py
gvi/ir/: __init__.py  schema.py
gvi/llm/: __init__.py
gvi/ocr/: __init__.py  text_extractor.py
gvi/plugins/: __init__.py
gvi/postprocess/: __init__.py  hierarchy_builder.py  theme_extractor.py  tilemap_builder.py
gvi/training/: __init__.py  active_learning.py  annotations.py  autolabel.py  dataset_builder.py  evaluate.py  hf_teacher.py  overlay.py  predict.py  review.py  rules.py  synthetic.py  taxonomy.py  train_yolo.py  yolo_formats.py
notebooks/: training_colab_template.ipynb
offline_test_shims/: README.md
offline_test_shims/pydantic/: __init__.py
offline_test_shims/rich/: __init__.py  console.py  table.py
scripts/: autolabel_platformer.sh  benchmark.py  install_training_tools.sh  showcase.py  train_platformer_yolo.sh
tests/: test_pipeline.py  test_segmentation_quality_gate.py  test_training_system.py  test_tscn_validity.py
(+66 files in other folders)
