[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gvi"
version = "1.3.0"
description = "Godot Vision Orchestrator — image/design to editable Godot scenes, with training-ready ML tooling."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GVI Contributors" }]
license = { text = "MIT" }
keywords = ["godot", "image", "segmentation", "sam2", "yolo", "ocr", "tileset", "vision"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Games/Entertainment",
]
dependencies = [
  "Pillow>=10.0",
  "numpy>=1.24",
  "pydantic>=2.5",
  "typer>=0.12",
  "rich>=13.0",
  "scikit-image>=0.21",
  "opencv-python-headless>=4.8",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
pdf = ["PyMuPDF>=1.24"]
svg = ["cairosvg>=2.7"]
psd = ["psd-tools>=1.10"]
sam2 = ["torch>=2.0", "torchvision>=0.15", "ultralytics>=8.3", "numpy<2.3"]
yolo = ["ultralytics>=8.3", "torch>=2.0", "torchvision>=0.15"]
ocr = ["easyocr>=1.7", "torch>=2.0", "torchvision>=0.15"]
full = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "PyMuPDF>=1.24",
  "cairosvg>=2.7",
  "psd-tools>=1.10",
  "torch>=2.0",
  "torchvision>=0.15",
  "ultralytics>=8.3",
  "easyocr>=1.7",
]

training = [
  "ultralytics>=8.3",
  "torch>=2.0",
  "torchvision>=0.15",
  "transformers>=4.44",
  "timm>=0.9",
  "accelerate>=0.30",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "requests>=2.31",
]
labeling = ["requests>=2.31"]
hf = ["transformers>=4.44", "torch>=2.0", "torchvision>=0.15", "timm>=0.9", "accelerate>=0.30"]
ml = [
  "ultralytics>=8.3",
  "torch>=2.0",
  "torchvision>=0.15",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "requests>=2.31",
]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
gvi = "gvi.cli:app"

[project.urls]
Homepage = "https://github.com/Txchrixo/gvi"
Issues = "https://github.com/Txchrixo/gvi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gvi*"]

[tool.setuptools.package-data]
gvi = ["py.typed", "training/configs/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"